--- a/Kozmetika_KLIJENT/src/forme/GlavnaForma.form
+++ b/Kozmetika_KLIJENT/src/forme/GlavnaForma.form
@@ -305,14 +305,17 @@
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel5" min="-2" pref="68" max="-2" attributes="0"/>
-                                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel7" min="-2" pref="116" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jLabel5" min="-2" pref="68" max="-2" attributes="0"/>
+                              <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel7" min="-2" pref="116" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="btnDodajStavku" min="-2" pref="106" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="cbProizvodi" max="32767" attributes="0"/>
@@ -320,11 +323,9 @@
                                   <Component id="txtCenaStavke" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
-                              <Component id="btnDodajStavku" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="btnObrisiStavku" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnObrisiStavku" min="-2" pref="108" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
@@ -424,7 +425,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="btnObrisiStavku">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Obrisi stavku"/>
+                <Property name="text" type="java.lang.String" value="Obri&#x161;i stavku"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnObrisiStavkuActionPerformed"/>
@@ -457,7 +458,7 @@
         </Container>
         <Component class="javax.swing.JButton" name="btnSacuvaj">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Sacuvaj"/>
+            <Property name="text" type="java.lang.String" value="Sa&#x10d;uvaj"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSacuvajActionPerformed"/>
