--- a/Kozmetika_KLIJENT/src/formeKupca/FrmDetaljiKupca.form
+++ b/Kozmetika_KLIJENT/src/formeKupca/FrmDetaljiKupca.form
@@ -169,7 +169,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnOtkazi">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Otkazi"/>
+            <Property name="text" type="java.lang.String" value="Otka&#x17e;i"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOtkaziActionPerformed"/>
@@ -185,7 +185,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnObrisi">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Obrisi"/>
+            <Property name="text" type="java.lang.String" value="Obri&#x161;i"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnObrisiActionPerformed"/>
