--- a/Kozmetika_KLIJENT/src/formeKupca/FrmPretragaKupca.form
+++ b/Kozmetika_KLIJENT/src/formeKupca/FrmPretragaKupca.form
@@ -128,7 +128,7 @@
         </Container>
         <Component class="javax.swing.JButton" name="btnOtkazi">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Otkazi"/>
+            <Property name="text" type="java.lang.String" value="Otka&#x17e;i"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOtkaziActionPerformed"/>
