--- a/Kozmetika_KLIJENT/src/formePorudzbine/FrmDetaljiPorudzbine.form
+++ b/Kozmetika_KLIJENT/src/formePorudzbine/FrmDetaljiPorudzbine.form
@@ -48,7 +48,7 @@
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Detalji porudzbine">
+            <TitledBorder title="Detalji porud&#x17e;bine">
               <Font PropertyName="font" name="Segoe UI" size="14" style="1"/>
             </TitledBorder>
           </Border>
@@ -157,7 +157,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnOtkazi">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Otkazi porudzbinu"/>
+            <Property name="text" type="java.lang.String" value="Otka&#x17e;i porud&#x17e;binu"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOtkaziActionPerformed"/>
@@ -165,7 +165,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnIzmeni">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Izmeni porudzbinu"/>
+            <Property name="text" type="java.lang.String" value="Izmeni porud&#x17e;binu"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIzmeniActionPerformed"/>
@@ -306,7 +306,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="btnObrisiStavku">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Obrisi stavku"/>
+                <Property name="text" type="java.lang.String" value="Obri&#x161;i stavku"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnObrisiStavkuActionPerformed"/>
