--- a/Kozmetika_KLIJENT/src/formeStatistika/FrmRecenzija.form
+++ b/Kozmetika_KLIJENT/src/formeStatistika/FrmRecenzija.form
@@ -47,8 +47,6 @@
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="btnObrisi" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="btnOtkazi" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -66,10 +64,7 @@
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="268" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="btnOtkazi" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnObrisi" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="btnOtkazi" min="-2" max="-2" attributes="0"/>
                   <EmptySpace pref="39" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -97,17 +92,9 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="btnObrisi">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Obrisi"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnObrisiActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JButton" name="btnOtkazi">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Otkazi"/>
+            <Property name="text" type="java.lang.String" value="Otka&#x17e;i"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOtkaziActionPerformed"/>
